RESOLVED FIXED34335
ScriptCallFrame's do not get line numbers/source id's if the caller is unkown.
https://bugs.webkit.org/show_bug.cgi?id=34335
Summary ScriptCallFrame's do not get line numbers/source id's if the caller is unkown.
Ben Murdoch
Reported 2010-01-29 10:06:33 PST
When we append a StackCallFrame to the ScriptCallStack, if the calling function is unknown we do not supply the CallFrame with any source id or line number information although this data is available. Instead, an empty source id and line number of 0 is supplied. I propose a patch to add the correct line number and source ID to the callframe. Patch and updates to layout tests to follow.
Attachments
Proposed patch and updated layout tests. (6.50 KB, patch)
2010-02-01 04:44 PST, Ben Murdoch
darin: review+
benm: commit-queue-
Ben Murdoch
Comment 1 2010-02-01 04:44:16 PST
Created attachment 47829 [details] Proposed patch and updated layout tests.
Darin Adler
Comment 2 2010-02-01 10:00:54 PST
Comment on attachment 47829 [details] Proposed patch and updated layout tests. > + * platform/gtk/inspector/console-log-before-inspector-open-expected.txt: Removed. > + * platform/mac/inspector/console-log-before-inspector-open-expected.txt: Removed. > + * platform/win/inspector/console-log-before-inspector-open-expected.txt: Removed. Change log doesn't say why you did this. I presume that these platform-specific results were actually just working around the bug?
Ben Murdoch
Comment 3 2010-02-01 10:03:56 PST
Thanks for the review! (In reply to comment #2) > (From update of attachment 47829 [details]) > > + * platform/gtk/inspector/console-log-before-inspector-open-expected.txt: Removed. > > + * platform/mac/inspector/console-log-before-inspector-open-expected.txt: Removed. > > + * platform/win/inspector/console-log-before-inspector-open-expected.txt: Removed. > > Change log doesn't say why you did this. I presume that these platform-specific > results were actually just working around the bug? Precisely - I can update the ChangeLog and land manually, if you like? Thanks, Ben
Ben Murdoch
Comment 4 2010-02-01 10:29:57 PST
Comment on attachment 47829 [details] Proposed patch and updated layout tests. Will land manually.
Ben Murdoch
Comment 5 2010-02-02 02:15:21 PST
Landed as r54138. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.