ScriptCallFrame's do not get line numbers/source id's if the caller is unkown. https://bugs.webkit.org/show_bug.cgi?id=34335

Reviewed by Darin Adler.

WebCore:

* bindings/js/ScriptCallStack.cpp:
(WebCore::ScriptCallStack::ScriptCallStack): If the caller is unknown, the line number and source information is still availble so pass it to the ScriptCallFrame being constructed.

LayoutTests:

Update layout tests that did not have source and line number information for their console messages, as this information is now available to the ScriptCallFrame and thus can be passed to the inspector, for example.

* fast/js/console-non-string-values-expected.txt: Add console line number/source.
* userscripts/script-not-run-for-fragments-expected.txt: ditto.
* userscripts/script-run-at-start-expected.txt: ditto.
* platform/gtk/inspector/console-log-before-inspector-open-expected.txt: Removed as platform workarounds no longer necessary.
* platform/mac/inspector/console-log-before-inspector-open-expected.txt: ditto.
* platform/win/inspector/console-log-before-inspector-open-expected.txt: ditto.



Canonical link: https://commits.webkit.org/45504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54138 268f45cc-cd09-0410-ab3c-d52691b4dbfc